@@ -50,7 +50,7 @@ from itrade_wxlabel import iTrade_wxLabel
 # matplotlib system
 import matplotlib
 matplotlib.use('WXAgg')
-matplotlib.rcParams['numerix'] = 'numarray'
+matplotlib.rcParams['numerix'] = 'numpy'
 
 from pylab import *
 
